AP-2007-11-06-0: Bugfix:     Added Wallclock Time example query for Postgresql db.

JO-2007-10-31-0: Bugfix:      Long running jobs cause incorrect usage summary from ARCo database
                 Bugster:     6618599
                 Issue:       2414
                 Review:      AP

AP-2007-10-31-0: Bugfix:      o Oracle, Postgres DWB should prompt for tablespace 
                              where indexes and tables should be created
                              o recompile views dependend on altered tables
                 Bugster:     6565821
                 Issue:       2283
                 Review:      JO

RD-2007-10-24-0: CVS          Created V61ARsnapshot3_TAG
--------------------------------------------------------

JO-2007-10-24-0: Bugfix:      ARCO view_accounting filters out parallel job usage incorrectly
                 Bugster:     6620930
                 Issue:       2415
                 Review:      AP

JO-2007-10-23-0: Bugfix:      o Returned method commit and rollback in Database class to previous state,
                                state where they are not checking if connection is closed
                              o removed some unnecessary logs

AP-2007-10-23-0: Bugfix:      During the installation the admin user should create web.xml file
                 Bugster:     6620253
                 Review:      JG

JO-2007-08-06-0: Refactoring: Class, method name changes, new package
                 Review:      JG

JO-2007-07-20-0: Bugfix:      Oracle: rollback segments keep filling up, Postgres: delete query keeps running
                 Bugster:     6565841
                 Issue:       2284
                 Bugfix:      sge_queue_values definition does not contain PRIMARY KEY
                 Bugster:     6572801
                 Issue:       2309
                 Bugfix:      Oralce, Postgres FOREIGN KEY fields need to be indexed
                 Bugster:     6574565
                 Issue:       2317