@@ -1,3 +1,9 @@
+AP-2007-11-07-0: Bugfix:      o ju_exit_status should provide means to recognize 
+                              the intermediate record
+                              o fix of correction of usage summary for Oracle db
+                 Bugster:     6621482
+                 Review:      JO
+
 AP-2007-11-06-0: Bugfix:     Added Wallclock Time example query for Postgresql db.
 
 JO-2007-10-31-0: Bugfix:      Long running jobs cause incorrect usage summary from ARCo database
